src/objects/NamespaceSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Populated by install post-script to know what namespace prefix to use by our code when deployed in subscriber org. http://salesforce.stackexchange.com/questions/28974/determining-namespace-prefix-in-javascript-and-apex</description>
    <fields>
        <fullName>BarPrefix__c</fullName>
        <description>The namespace with double underscore suffix &apos;ns__&apos;</description>
        <inlineHelpText>The namespace with double underscore suffix &apos;ns__&apos;</inlineHelpText>
        <label>Bar Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DotPrefix__c</fullName>
        <description>The namespace with dot suffix &apos;ns.&apos;</description>
        <inlineHelpText>The namespace with dot suffix &apos;ns.&apos;</inlineHelpText>
        <label>Dot Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RawPrefix__c</fullName>
        <description>Just the namespace &apos;ns&apos;</description>
        <inlineHelpText>Just the namespace &apos;ns&apos;</inlineHelpText>
        <label>Raw Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Namespace Settings</label>
</CustomObject>